--- a/src/uLearn.Web/packages.config
+++ b/src/uLearn.Web/packages.config
@@ -23,27 +23,39 @@
   <package id="LtiLibrary.Core" version="1.6.2" targetFramework="net47" />
   <package id="LtiLibrary.Owin.Security.Lti" version="1.0.0-beta" targetFramework="net47" />
   <package id="MarkdownDeep.NET.Core" version="1.5.0.4" targetFramework="net47" />
-  <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net47" />
-  <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.1" targetFramework="net47" />
+  <package id="Microsoft.AspNet.Identity.Core" version="2.2.2" targetFramework="net47" />
+  <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.2" targetFramework="net47" />
   <package id="Microsoft.AspNet.Identity.Owin" version="2.2.1" targetFramework="net47" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net47" />
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net47" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net47" />
-  <package id="Microsoft.AspNet.WebApi" version="5.2.3" targetFramework="net47" />
-  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net47" />
-  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net47" />
-  <package id="Microsoft.AspNet.WebApi.Owin" version="5.2.3" targetFramework="net47" />
-  <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.3" targetFramework="net47" />
+  <package id="Microsoft.AspNet.WebApi" version="5.2.7" targetFramework="net47" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.7" targetFramework="net47" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.7" targetFramework="net47" />
+  <package id="Microsoft.AspNet.WebApi.Owin" version="5.2.7" targetFramework="net47" />
+  <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.7" targetFramework="net47" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net47" />
-  <package id="Microsoft.AspNetCore.Cryptography.Internal" version="2.1.1" targetFramework="net47" />
-  <package id="Microsoft.AspNetCore.DataProtection" version="2.1.1" targetFramework="net47" />
-  <package id="Microsoft.AspNetCore.DataProtection.Abstractions" version="2.1.1" targetFramework="net47" />
-  <package id="Microsoft.AspNetCore.DataProtection.Extensions" version="2.1.1" targetFramework="net47" />
-  <package id="Microsoft.AspNetCore.Hosting.Abstractions" version="2.1.1" targetFramework="net47" />
-  <package id="Microsoft.AspNetCore.Hosting.Server.Abstractions" version="2.1.1" targetFramework="net47" />
-  <package id="Microsoft.AspNetCore.Html.Abstractions" version="2.1.1" targetFramework="net47" />
-  <package id="Microsoft.AspNetCore.Http.Abstractions" version="2.1.1" targetFramework="net47" />
-  <package id="Microsoft.AspNetCore.Http.Features" version="2.1.1" targetFramework="net47" />
+  <package id="Microsoft.AspNetCore.Authentication.Abstractions" version="2.2.0" targetFramework="net47" />
+  <package id="Microsoft.AspNetCore.Authentication.Core" version="2.2.0" targetFramework="net47" />
+  <package id="Microsoft.AspNetCore.Authorization" version="2.2.0" targetFramework="net47" />
+  <package id="Microsoft.AspNetCore.Authorization.Policy" version="2.2.0" targetFramework="net47" />
+  <package id="Microsoft.AspNetCore.Cryptography.Internal" version="2.2.0" targetFramework="net47" />
+  <package id="Microsoft.AspNetCore.DataProtection" version="2.2.0" targetFramework="net47" />
+  <package id="Microsoft.AspNetCore.DataProtection.Abstractions" version="2.2.0" targetFramework="net47" />
+  <package id="Microsoft.AspNetCore.DataProtection.Extensions" version="2.2.0" targetFramework="net47" />
+  <package id="Microsoft.AspNetCore.Hosting.Abstractions" version="2.2.0" targetFramework="net47" />
+  <package id="Microsoft.AspNetCore.Hosting.Server.Abstractions" version="2.2.0" targetFramework="net47" />
+  <package id="Microsoft.AspNetCore.Html.Abstractions" version="2.2.0" targetFramework="net47" />
+  <package id="Microsoft.AspNetCore.Http" version="2.2.0" targetFramework="net47" />
+  <package id="Microsoft.AspNetCore.Http.Abstractions" version="2.2.0" targetFramework="net47" />
+  <package id="Microsoft.AspNetCore.Http.Extensions" version="2.2.0" targetFramework="net47" />
+  <package id="Microsoft.AspNetCore.Http.Features" version="2.2.0" targetFramework="net47" />
+  <package id="Microsoft.AspNetCore.Mvc.Abstractions" version="2.2.0" targetFramework="net47" />
+  <package id="Microsoft.AspNetCore.Mvc.Core" version="2.2.0" targetFramework="net47" />
+  <package id="Microsoft.AspNetCore.ResponseCaching.Abstractions" version="2.2.0" targetFramework="net47" />
+  <package id="Microsoft.AspNetCore.Routing" version="2.2.0" targetFramework="net47" />
+  <package id="Microsoft.AspNetCore.Routing.Abstractions" version="2.2.0" targetFramework="net47" />
+  <package id="Microsoft.AspNetCore.WebUtilities" version="2.2.0" targetFramework="net47" />
   <package id="Microsoft.Bcl" version="1.1.10" targetFramework="net47" />
   <package id="Microsoft.Bcl.Async" version="1.0.168" targetFramework="net47" />
   <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="net47" />
@@ -59,28 +71,28 @@
   <package id="Microsoft.CodeAnalysis.VisualBasic.Workspaces" version="2.8.2" targetFramework="net47" />
   <package id="Microsoft.CodeAnalysis.Workspaces.Common" version="2.8.2" targetFramework="net47" />
   <package id="Microsoft.DotNet.PlatformAbstractions" version="2.1.0" targetFramework="net47" />
-  <package id="Microsoft.Extensions.Configuration" version="2.1.1" targetFramework="net47" />
-  <package id="Microsoft.Extensions.Configuration.Abstractions" version="2.1.1" targetFramework="net47" />
-  <package id="Microsoft.Extensions.Configuration.Binder" version="2.1.1" targetFramework="net47" />
-  <package id="Microsoft.Extensions.Configuration.FileExtensions" version="2.1.1" targetFramework="net47" />
-  <package id="Microsoft.Extensions.Configuration.Json" version="2.1.1" targetFramework="net47" />
-  <package id="Microsoft.Extensions.DependencyInjection" version="2.1.1" targetFramework="net47" />
-  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="2.1.1" targetFramework="net47" />
+  <package id="Microsoft.Extensions.Configuration" version="2.2.0" targetFramework="net47" />
+  <package id="Microsoft.Extensions.Configuration.Abstractions" version="2.2.0" targetFramework="net47" />
+  <package id="Microsoft.Extensions.Configuration.Binder" version="2.2.0" targetFramework="net47" />
+  <package id="Microsoft.Extensions.Configuration.FileExtensions" version="2.2.0" targetFramework="net47" />
+  <package id="Microsoft.Extensions.Configuration.Json" version="2.2.0" targetFramework="net47" />
+  <package id="Microsoft.Extensions.DependencyInjection" version="2.2.0" targetFramework="net47" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="2.2.0" targetFramework="net47" />
   <package id="Microsoft.Extensions.DependencyModel" version="2.1.0" targetFramework="net47" />
-  <package id="Microsoft.Extensions.FileProviders.Abstractions" version="2.1.1" targetFramework="net47" />
-  <package id="Microsoft.Extensions.FileProviders.Physical" version="2.1.1" targetFramework="net47" />
-  <package id="Microsoft.Extensions.FileSystemGlobbing" version="2.1.1" targetFramework="net47" />
-  <package id="Microsoft.Extensions.Hosting.Abstractions" version="2.1.1" targetFramework="net47" />
-  <package id="Microsoft.Extensions.Logging.Abstractions" version="2.1.1" targetFramework="net47" />
-  <package id="Microsoft.Extensions.ObjectPool" version="2.1.0" targetFramework="net47" />
-  <package id="Microsoft.Extensions.Options" version="2.1.1" targetFramework="net47" />
-  <package id="Microsoft.Extensions.Primitives" version="2.1.1" targetFramework="net47" />
+  <package id="Microsoft.Extensions.FileProviders.Abstractions" version="2.2.0" targetFramework="net47" />
+  <package id="Microsoft.Extensions.FileProviders.Physical" version="2.2.0" targetFramework="net47" />
+  <package id="Microsoft.Extensions.FileSystemGlobbing" version="2.2.0" targetFramework="net47" />
+  <package id="Microsoft.Extensions.Hosting.Abstractions" version="2.2.0" targetFramework="net47" />
+  <package id="Microsoft.Extensions.Logging.Abstractions" version="2.2.0" targetFramework="net47" />
+  <package id="Microsoft.Extensions.ObjectPool" version="2.2.0" targetFramework="net47" />
+  <package id="Microsoft.Extensions.Options" version="2.2.0" targetFramework="net47" />
+  <package id="Microsoft.Extensions.Primitives" version="2.2.0" targetFramework="net47" />
   <package id="Microsoft.IdentityModel.Protocol.Extensions" version="1.0.0" targetFramework="net47" />
   <package id="Microsoft.jQuery.Unobtrusive.Ajax" version="3.2.3" targetFramework="net47" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.3" targetFramework="net47" />
   <package id="Microsoft.Net.Compilers" version="2.4.0" targetFramework="net47" developmentDependency="true" />
   <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="net47" />
-  <package id="Microsoft.Net.Http.Headers" version="2.1.0" targetFramework="net47" />
+  <package id="Microsoft.Net.Http.Headers" version="2.2.0" targetFramework="net47" />
   <package id="Microsoft.NETCore.Platforms" version="2.1.0" targetFramework="net47" />
   <package id="Microsoft.Owin" version="3.1.0" targetFramework="net47" />
   <package id="Microsoft.Owin.Host.SystemWeb" version="3.1.0" targetFramework="net47" />
@@ -182,6 +194,7 @@
   <package id="System.Threading" version="4.3.0" targetFramework="net47" />
   <package id="System.Threading.Tasks" version="4.3.0" targetFramework="net47" />
   <package id="System.Threading.Tasks.Dataflow" version="4.5.24" targetFramework="net47" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.1" targetFramework="net47" />
   <package id="System.Threading.Tasks.Parallel" version="4.3.0" targetFramework="net47" />
   <package id="System.Threading.Thread" version="4.3.0" targetFramework="net47" />
   <package id="System.Threading.Timer" version="4.3.0" targetFramework="net47" />
