Use Common.Api in Antiplagiarism client and models
+ use VideoAnnotationClient directly in Ulearn.Web
+ adjust margins for video annotations suggest

--- a/src/AntiPlagiarism.Api/AntiPlagiarism.Api.csproj
+++ b/src/AntiPlagiarism.Api/AntiPlagiarism.Api.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="Serilog" Version="2.7.1" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Common.Api\Common.Api.csproj" />
     <ProjectReference Include="..\Common\Common.csproj">
       <Project>{3CC038A1-6AA0-49B0-9485-DB9589626BC3}</Project>
       <Name>Common</Name>
