--- a/src/Frontend/package.json
+++ b/src/Frontend/package.json
@@ -18,9 +18,8 @@
     "babel-eslint": "10.0.1",
     "babel-jest": "23.6.0",
     "babel-loader": "8.0.4",
-    "babel-preset-react-app": "3.1.1",
-    "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-preset-react-app": "^5.0.3",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-runtime": "6.26.0",
     "case-sensitive-paths-webpack-plugin": "2.1.2",
     "chalk": "2.4.1",
@@ -38,7 +37,6 @@
     "file-loader": "2.0.0",
     "file-saver": "^2.0.0-rc.3",
     "fs-extra": "7.0.0",
-    "jest": "23.6.0",
     "jest": "23.6.0",
     "object-assign": "4.1.1",
     "outdated-browser-rework": "2.5.4",
@@ -99,14 +97,13 @@
     "@storybook/react": "3.4.11",
     "@babel/preset-env": "^7.1.0",
     "@types/file-saver": "1.3.0",
-    "less-loader": "4.1.0",
+    "less-loader": "^4.1.0",
     "moment": "2.22.2",
     "moment-timezone": "0.5.23",
-    "react-copy-to-clipboard": "5.0.1"
+    "react-copy-to-clipboard": "5.0.1",
     "@types/react": "^16.4.15",
     "html-webpack-plugin": "next",
     "less": "^3.8.1",
-    "less-loader": "^4.1.0",
     "mini-css-extract-plugin": "^0.4.3",
     "uglifyjs-webpack-plugin": "latest"
   }
