--- a/src/Core.Tests/Core.Tests.csproj
+++ b/src/Core.Tests/Core.Tests.csproj
@@ -35,4 +35,8 @@
 			</Content>			
     </ItemGroup>
 
+    <ItemGroup>
+      <Compile Remove="Courses\Slides\TestData\Main.cs" />
+    </ItemGroup>
+
 </Project>
