--- a/src/Frontend/package.json
+++ b/src/Frontend/package.json
@@ -15,12 +15,13 @@
     "@babel/runtime": "^7.0.0",
     "@skbkontur/react-icons": "3.1.1",
     "@skbkontur/react-ui": "0.30.0",
+    "@storybook/addon-actions": "^4.1.7",
     "array-from": "2.1.1",
     "autoprefixer": "9.1.5",
+    "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "10.0.1",
     "babel-jest": "^23.4.2",
     "babel-loader": "8.0.4",
-    "babel-core": "7.0.0-bridge.0",
     "babel-preset-react-app": "^5.0.3",
     "case-sensitive-paths-webpack-plugin": "2.1.2",
     "chalk": "2.4.1",
@@ -96,7 +97,7 @@
   "proxy": "https://localhost:44300",
   "devDependencies": {
     "@babel/preset-env": "^7.1.0",
-    "@storybook/react": "3.4.11",
+    "@storybook/react": "4.1.7",
     "@types/file-saver": "1.3.0",
     "@types/react": "^16.4.15",
     "html-webpack-plugin": "next",
