A lot of different fixes for react group layout
A lot of changes for compact mobile layout (also for 404 page)
Text for groups list page if no pages exist
Show additional toastes after some user's actions
Expand some texts
Change responsive device constants to match common examples
Fix some bugs

--- a/src/Frontend/package.json
+++ b/src/Frontend/package.json
@@ -17,10 +17,10 @@
     "@skbkontur/react-ui": "0.30.0",
     "array-from": "2.1.1",
     "autoprefixer": "9.1.5",
+    "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "10.0.1",
     "babel-jest": "^23.4.2",
     "babel-loader": "8.0.4",
-    "babel-core": "7.0.0-bridge.0",
     "babel-preset-react-app": "^5.0.3",
     "case-sensitive-paths-webpack-plugin": "2.1.2",
     "chalk": "2.4.1",
@@ -54,6 +54,7 @@
     "react-dom": "^16.5.2",
     "react-helmet": "5.2.0",
     "react-redux": "5.0.7",
+    "react-responsive": "^6.0.1",
     "react-router-dom": "4.3.1",
     "react-yandex-metrika": "^2.4.2",
     "redux": "4.0.0",
