--- a/src/uLearn.Web/uLearn.Web.csproj
+++ b/src/uLearn.Web/uLearn.Web.csproj
@@ -1482,10 +1482,9 @@
     </Content>
     <Content Include="Views\Comments\_CommentText.cshtml" />
     <Content Include="Views\Admin\Comments.cshtml" />
-    <Content Include="Views\Admin\ManualQuizCheckingQueue.cshtml" />
     <Content Include="Views\Account\JoinGroup.cshtml" />
     <Content Include="Views\Course\CourseInstructorNavbar.cshtml" />
-    <Content Include="Views\Admin\ManualExerciseCheckingQueue.cshtml" />
+    <Content Include="Views\Admin\CheckingQueue.cshtml" />
     <Content Include="Views\Admin\_ManualCheckingQueueFilterForm.cshtml" />
     <Content Include="Views\Exercise\_ExerciseReview.cshtml" />
     <Content Include="Views\Exercise\SubmissionsPanel.cshtml" />
