Create courses by a new way
Set courseId and courseTitle before creating
Doesn't generate new slide ids
Find course.xml recursively
Create course version immediately
After creating redirect to packages page

--- a/src/uLearn.Web/uLearn.Web.csproj
+++ b/src/uLearn.Web/uLearn.Web.csproj
@@ -1418,7 +1418,7 @@
     <Content Include="Views\Hint\UseHint.cshtml" />
     <Content Include="Views\Account\List.cshtml" />
     <Content Include="Views\Admin\Units.cshtml" />
-    <Content Include="Views\Admin\CourseList.cshtml" />
+    <Content Include="Views\Admin\Courses.cshtml" />
     <Content Include="Views\Analytics\UnitStatistics.cshtml" />
     <Content Include="Views\Course\InstructorNote.cshtml" />
     <Content Include="Views\Questions\Items.cshtml" />
