--- a/src/CourseTool/CourseTool.csproj
+++ b/src/CourseTool/CourseTool.csproj
@@ -413,8 +413,8 @@
       <Link>renderer\styles\ulearn.css</Link>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="..\uLearn.Web\Content\Site.css">
-      <Link>renderer\styles\site.css</Link>
+    <Content Include="..\uLearn.Web\Content\main.css">
+      <Link>renderer\styles\main.css</Link>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="..\uLearn.Web\Scripts\slide-*.js">
