--- a/src/Frontend/package.json
+++ b/src/Frontend/package.json
@@ -52,7 +52,7 @@
     "react-bootstrap": "^0.32.4",
     "react-dev-utils": "^6.0.4",
     "react-dom": "^16.5.2",
-    "react-helmet": "5.2.0",
+    "react-helmet": "beta",
     "react-redux": "5.0.7",
     "react-responsive": "^6.0.1",
     "react-router-dom": "4.3.1",
