--- a/src/Frontend/package.json
+++ b/src/Frontend/package.json
@@ -15,7 +15,6 @@
     "@babel/runtime": "^7.0.0",
     "@skbkontur/react-icons": "3.1.1",
     "@skbkontur/react-ui": "0.30.0",
-    "@storybook/addon-actions": "^4.1.7",
     "array-from": "2.1.1",
     "autoprefixer": "9.1.5",
     "babel-core": "7.0.0-bridge.0",
@@ -97,6 +96,8 @@
   "proxy": "https://localhost:44300",
   "devDependencies": {
     "@babel/preset-env": "^7.1.0",
+    "@storybook/addon-actions": "^4.1.11",
+    "@storybook/addons": "^4.1.11",
     "@storybook/react": "4.1.7",
     "@types/file-saver": "1.3.0",
     "@types/react": "^16.4.15",
