--- a/src/Frontend/package.json
+++ b/src/Frontend/package.json
@@ -8,6 +8,12 @@
     "test": "jest",
     "storybook": "start-storybook -p 9001 -c .storybook"
   },
+  "jest": {
+    "moduleNameMapper": {
+      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js",
+      "\\.(css|less)$": "identity-obj-proxy"
+    }
+  },
   "dependencies": {
     "@babel/core": "^7.0.0",
     "@babel/plugin-proposal-class-properties": "^7.0.0",
@@ -54,7 +60,7 @@
     "react-dom": "^16.5.2",
     "react-helmet": "5.2.0",
     "react-redux": "5.0.7",
-    "react-responsive": "^6.0.1",
+    "react-responsive": "^6.1.1",
     "react-router-dom": "4.3.1",
     "react-yandex-metrika": "^2.4.2",
     "redux": "4.0.0",
@@ -70,27 +76,6 @@
     "webpack-manifest-plugin": "2.0.4",
     "whatwg-fetch": "3.0.0"
   },
-  "babel": {
-    "presets": [
-      [
-        "@babel/preset-env",
-        {
-          "targets": {
-            "browsers": [
-              "last 4 versions",
-              ">0.25%"
-            ]
-          },
-          "modules": false,
-          "useBuiltIns": "usage"
-        }
-      ],
-      "react-app"
-    ],
-    "plugins": [
-      "@babel/plugin-proposal-class-properties"
-    ]
-  },
   "eslintConfig": {
     "extends": "react-app"
   },
@@ -98,17 +83,20 @@
   "devDependencies": {
     "@babel/preset-env": "^7.1.0",
     "@storybook/addon-actions": "^4.1.11",
+    "@storybook/addon-viewport": "^4.1.11",
     "@storybook/addons": "^4.1.11",
     "@storybook/react": "4.1.7",
     "@types/file-saver": "1.3.0",
     "@types/react": "^16.4.15",
     "html-webpack-plugin": "next",
+    "identity-obj-proxy": "^3.0.0",
     "less": "^3.8.1",
     "less-loader": "^4.1.0",
     "mini-css-extract-plugin": "^0.4.3",
     "moment": "2.22.2",
     "moment-timezone": "0.5.23",
     "react-copy-to-clipboard": "5.0.1",
+    "react-keyboard-event-handler": "^1.4.1",
     "uglifyjs-webpack-plugin": "latest"
   }
 }
