--- a/src/Frontend/package.json
+++ b/src/Frontend/package.json
@@ -31,6 +31,7 @@
     "case-sensitive-paths-webpack-plugin": "2.1.2",
     "chalk": "2.4.1",
     "css-loader": "1.0.0",
+    "debounce": "^1.2.0",
     "dotenv": "6.0.0",
     "dotenv-expand": "4.2.0",
     "eslint": "5.6.1",
@@ -93,10 +94,9 @@
     "less": "^3.8.1",
     "less-loader": "^4.1.0",
     "mini-css-extract-plugin": "^0.4.3",
-    "moment": "2.22.2",
+    "moment": "^2.22.2",
     "moment-timezone": "0.5.23",
     "react-copy-to-clipboard": "5.0.1",
-    "react-keyboard-event-handler": "^1.4.1",
     "uglifyjs-webpack-plugin": "latest"
   }
 }
