--- a/src/uLearn.Web/Web.config
+++ b/src/uLearn.Web/Web.config
@@ -71,7 +71,7 @@
     <add key="ulearn.certificatesDirectory" value=""/>
       
     <!-- Если параметр ulearn.requireHttps равен true, то все HTTP-запросы будут возвращать
-         перенаправление на HTTPS (или ошибку 500, если это POST-запрос) -->
+         перенаправление на HTTPS (или 403 с описанием "SSL required", если это POST-запрос) -->
     <add key="ulearn.requireHttps" value="false"/>
       
     <!-- Секретная строка для вычисления секретных хешей -->
