--- a/src/Frontend/package.json
+++ b/src/Frontend/package.json
@@ -55,14 +55,15 @@
     "prop-types": "latest",
     "raf": "3.4.0",
     "react": "^16.8.3",
-    "react-addons-css-transition-group": "15.6.2",
     "react-bootstrap": "^0.32.4",
+    "react-copy-to-clipboard": "5.0.1",
     "react-dev-utils": "^6.0.4",
     "react-dom": "^16.8.3",
     "react-helmet": "beta",
     "react-redux": "5.0.7",
     "react-responsive": "^6.1.1",
     "react-router-dom": "4.3.1",
+    "react-transition-group": "2.6.0",
     "react-yandex-metrika": "^2.4.2",
     "redux": "4.0.0",
     "redux-logger": "3.0.6",
@@ -72,6 +73,7 @@
     "sw-precache-webpack-plugin": "0.11.5",
     "url-loader": "1.1.1",
     "url-polyfill": "^1.1.0",
+    "uuid": "^3.3.2",
     "webpack": "4.20.2",
     "webpack-dev-server": "^3.1.14",
     "webpack-manifest-plugin": "2.0.4",
@@ -96,7 +98,6 @@
     "mini-css-extract-plugin": "^0.4.3",
     "moment": "^2.22.2",
     "moment-timezone": "0.5.23",
-    "react-copy-to-clipboard": "5.0.1",
     "uglifyjs-webpack-plugin": "latest"
   }
 }
