--- a/src/Web.Api/appsettings.json
+++ b/src/Web.Api/appsettings.json
@@ -20,6 +20,7 @@
             "channel": ""
         }
     },
+    "graphiteServiceName": "api",
     "buildExerciseStudentZips": true,
     "exerciseStudentZipsDirectory": "",
     "certificates": {
