--- a/src/uLearn.Web/appsettings.json
+++ b/src/uLearn.Web/appsettings.json
@@ -7,6 +7,7 @@
             "channel": ""
         }
     },
+    "graphiteServiceName": "web",
     "buildExerciseStudentZips": true,
     "exerciseStudentZipsDirectory": "",
     "certificates": {
