--- a/src/RunCsJob/packages.config
+++ b/src/RunCsJob/packages.config
@@ -28,6 +28,7 @@
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net47" />
   <package id="NUnit" version="3.10.1" targetFramework="net47" />
   <package id="OctoPack" version="3.6.3" targetFramework="net47" developmentDependency="true" />
+  <package id="StatsdClient" version="2.0.68" targetFramework="net47" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net47" />
   <package id="System.Buffers" version="4.4.0" targetFramework="net47" />
   <package id="System.Collections" version="4.3.0" targetFramework="net47" />
