--- a/src/Frontend/package.json
+++ b/src/Frontend/package.json
@@ -17,7 +17,6 @@
   "dependencies": {
     "@babel/core": "^7.0.0",
     "@babel/plugin-proposal-class-properties": "^7.0.0",
-    "@babel/polyfill": "^7.0.0",
     "@babel/runtime": "^7.0.0",
     "@skbkontur/react-icons": "3.1.3",
     "@skbkontur/react-ui": "0.40.1",
@@ -25,7 +24,7 @@
     "autoprefixer": "9.1.5",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "10.0.1",
-    "babel-jest": "^23.4.2",
+    "babel-jest": "^24.5.0",
     "babel-loader": "8.0.4",
     "babel-preset-react-app": "^5.0.3",
     "case-sensitive-paths-webpack-plugin": "2.1.2",
@@ -45,13 +44,14 @@
     "file-loader": "2.0.0",
     "file-saver": "^2.0.0-rc.3",
     "fs-extra": "7.0.0",
-    "jest": "23.6.0",
+    "jest": "24.5.0",
     "object-assign": "4.1.1",
     "outdated-browser-rework": "2.5.4",
     "polyfill-array-includes": "^1.0.0",
     "postcss-flexbugs-fixes": "4.1.0",
     "postcss-loader": "3.0.0",
     "promise": "8.0.2",
+    "promise.prototype.finally": "3.1.0",
     "prop-types": "latest",
     "raf": "3.4.0",
     "react": "^16.8.3",
