Include Metrics in projects with Core

--- a/src/Database.Core/Database.Core.csproj
+++ b/src/Database.Core/Database.Core.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\Core\Core.csproj" />
+    <ProjectReference Include="..\Metrics\Metrics.csproj" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="LtiLibrary.NetCore" Version="3.1.1" />
