--- a/src/Core.Tests/Core.Tests.csproj
+++ b/src/Core.Tests/Core.Tests.csproj
@@ -1,7 +1,7 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>netcoreapp2.1</TargetFramework>
+        <TargetFramework>netcoreapp2.2</TargetFramework>
 
         <IsPackable>false</IsPackable>
 				<RootNamespace>Ulearn.Core.Tests</RootNamespace>
@@ -18,6 +18,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\Core\Core.csproj" />
+      <ProjectReference Include="..\Metrics\Metrics.csproj" />
     </ItemGroup>
 
     <ItemGroup>
