--- a/src/Stepik.Api/Stepik.Api.csproj
+++ b/src/Stepik.Api/Stepik.Api.csproj
@@ -5,6 +5,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Common\Common.csproj" />
     <ProjectReference Include="..\Core\Core.csproj" />
+    <ProjectReference Include="..\Metrics\Metrics.csproj" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="NETStandard.Library" Version="2.0.3" />
