--- a/src/VideoAnnotations.Web/VideoAnnotations.Web.csproj
+++ b/src/VideoAnnotations.Web/VideoAnnotations.Web.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 	
     <PropertyGroup>
         <TargetFramework>netcoreapp2.2</TargetFramework>
@@ -46,6 +46,7 @@
     <ItemGroup>
       <ProjectReference Include="..\Common.Api\Common.Api.csproj" />
       <ProjectReference Include="..\Core\Core.csproj" />
+      <ProjectReference Include="..\Metrics\Metrics.csproj" />
       <ProjectReference Include="..\VideoAnnotations.Api\VideoAnnotations.Api.csproj" />
     </ItemGroup>
 
