--- a/src/Web.Api/Web.Api.csproj
+++ b/src/Web.Api/Web.Api.csproj
@@ -38,6 +38,7 @@
     <ProjectReference Include="..\Common.Api\Common.Api.csproj" />
     <ProjectReference Include="..\Core\Core.csproj" />
     <ProjectReference Include="..\Database.Core\Database.Core.csproj" />
+    <ProjectReference Include="..\Metrics\Metrics.csproj" />
     <ProjectReference Include="..\RunCsJob.Api\RunCsJob.Api.csproj" />
   </ItemGroup>
   <ItemGroup>
