Several devops fixes

--- a/src/Notifications/appsettings.json
+++ b/src/Notifications/appsettings.json
@@ -6,5 +6,5 @@
             "channel": ""
         }
     },
-    "graphiteServiceName": "notificstions"
+    "graphiteServiceName": "notifications"
 }
