--- a/src/RunCsJob/App.config
+++ b/src/RunCsJob/App.config
@@ -19,7 +19,12 @@
 		<!-- Directory for compiling msbuild solutions. By default it's ./submissions in current directory -->
 		<add key="ulearn.runcsjob.submissionsWorkingDirectory" value="" />
 		<!-- Delete submissions after checking -->
-		<add key="ulearn.runcsjob.deleteSubmissions" value="true" />		
+		<add key="ulearn.runcsjob.deleteSubmissions" value="true" />
+		<add key="ulearn.telegram.botToken" value="" />
+		<!-- Канал в телеграме, куда отправлять информацию об ошибках -->
+		<add key="ulearn.telegram.errors.channel" value="" />
+		<!-- Раз в сколько секунд посылать метрику keep alive -->
+		<add key="ulearn.xqueuewatcher.keepAlive.interval" value="10" />
 	</appSettings>
 	<startup> 
 		<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7" />
