--- a/src/GiftsGranter/App.config
+++ b/src/GiftsGranter/App.config
@@ -13,9 +13,10 @@
 
     <!-- Данные для интеграции с Телеграмом -->
     <!-- Токен бота. Получать у t.me/BotFather -->
-	<add key="ulearn.telegram.botToken" value="293737221:AAGaAxFmEUjmiyixyy6VNPsaqc_G5ChSYOg" />
+    <add key="ulearn.telegram.botToken" value="293737221:AAGaAxFmEUjmiyixyy6VNPsaqc_G5ChSYOg" />
     <!-- Канал в телеграме, куда отправлять информацию об ошибках -->
     <add key="ulearn.telegram.gifts.channel" value="@ulearngifts" />
+    <add key="ulearn.telegram.errors.channel" value="" />
   </appSettings>   
   <log4net>
     <root>
@@ -51,7 +52,7 @@
        telegram:botToken
        telegram:errors:channel 
     -->
-    <appender name="TelegramAppender" type="ulearn.Logging.TelegramAppender, Core">
+    <appender name="TelegramAppender" type="Ulearn.Core.Logging.TelegramAppender, Core">
       <threshold value="Error" />
       <layout type="log4net.Layout.PatternLayout">
         <conversionPattern value="%date [%thread] %-5level %logger — %message%newline" />
