--- a/src/GiftsGranter/appsettings.json
+++ b/src/GiftsGranter/appsettings.json
@@ -5,7 +5,7 @@
       "channel": ""
     }
   },
-  "graphiteServiceName": "giftsgranter"
+  "graphiteServiceName": "giftsgranter",
   "maxGiftsPerRun": 2,
   "delayBetweenStaffRequests": 500,
   "staff": {
