--- a/src/XQueueWatcher/App.config
+++ b/src/XQueueWatcher/App.config
@@ -56,7 +56,7 @@
        ulearn.telegram.botToken
        ulearn.telegram.errors.channel 
     -->
-    <appender name="TelegramAppender" type="ulearn.Logging.TelegramAppender, Core">
+    <appender name="TelegramAppender" type="Ulearn.Core.Logging.TelegramAppender, Core">
       <threshold value="Error" />
       <layout type="log4net.Layout.PatternLayout">
         <conversionPattern value="%date [%thread] %-5level %logger — %message%newline" />
