ulearn.runcsjob.keepAlive.interval

--- a/src/RunCsJob/App.config
+++ b/src/RunCsJob/App.config
@@ -24,7 +24,7 @@
 		<!-- Канал в телеграме, куда отправлять информацию об ошибках -->
 		<add key="ulearn.telegram.errors.channel" value="" />
 		<!-- Раз в сколько секунд посылать метрику keep alive -->
-		<add key="ulearn.xqueuewatcher.keepAlive.interval" value="10" />
+		<add key="ulearn.runcsjob.keepAlive.interval" value="20" />
 	</appSettings>
 	<startup> 
 		<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7" />
