add some test cases

--- a/src/uLearn.Tests/uLearn.Tests.csproj
+++ b/src/uLearn.Tests/uLearn.Tests.csproj
@@ -407,13 +407,15 @@
     <Compile Include="CSharp\RefArgumentsValidation\RefArgumentsValidator_should.cs" />
     <Compile Include="CSharp\SpellingValidation\SpellingValidator_should.cs" />
     <Compile Include="CSharp\SpellingValidation\TestData\Correct\FileWithAmeticanVariantOfEnglish.cs" />
+    <Compile Include="CSharp\SpellingValidation\TestData\Correct\FileWithBritishVariantOfEnglish.cs" />
+    <Compile Include="CSharp\SpellingValidation\TestData\Correct\FileWithConcatenatedWords.cs" />
     <Compile Include="CSharp\SpellingValidation\TestData\Correct\FileWithExceptions.cs" />
     <Content Include="CSharp\testProject\Prelude.cs">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Compile Include="CSharp\SpellingValidation\TestData\Correct\FileWithLatinNames.cs" />
     <Compile Include="CSharp\SpellingValidation\TestData\Correct\FileWithoutMisspellings.cs" />
     <Compile Include="CSharp\SpellingValidation\TestData\Correct\FileWithShortNamesOrAbbreviations.cs" />
-    <Compile Include="CSharp\SpellingValidation\TestData\Incorrect\FileWithBritishVariantOfEnglish.cs" />
     <Compile Include="CSharp\SpellingValidation\TestData\Incorrect\FileWithMisspellings.cs" />
     <Compile Include="CSharp\VarInVariableDeclarationValidator_should.cs" />
     <Compile Include="CSharp\TestPaths.cs" />
